--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -184,6 +184,7 @@ target_link_libraries(TestInstall
     Pathcch
     glslang-default-resource-limits
     gtest_main
+    Foundation
     ${ADDITIONAL_LIBRARIES}
     )
 
