--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -25,7 +25,7 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(WIN32 OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID))
+if(WIN32)# OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID))
     FetchContent_MakeAvailable_With_Message(googletest)
 endif()
 
