--- a/.github/jobs/ios.yml
+++ b/.github/jobs/ios.yml
@@ -35,6 +35,6 @@ jobs:
       displayName: 'Build Playground iOS'
 
     - script: |
-        cmake --install buildiOS --prefix="./install"
+        cmake --install buildiOS --prefix="${PROJECT_SOURCE_DIR}/install"
       displayName: 'Install'
 
